--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -62,7 +62,8 @@
           "pages/AbaloneLoad",
           "pages/iris",
           "pages/Iris_classification",
-          "pages/mnist"
+          "pages/mnist",
+          "pages/HousePrice"
         ],
         "name": ".MainAbility",
         "window": {
