Loaded Iris Tracker Graph Model

--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -63,7 +63,8 @@
           "pages/iris",
           "pages/Iris_classification",
           "pages/mnist",
-          "pages/HousePrice"
+          "pages/HousePrice",
+          "pages/IrisTracker"
         ],
         "name": ".MainAbility",
         "window": {
