Added Spam detection model

--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -64,7 +64,8 @@
           "pages/Iris_classification",
           "pages/mnist",
           "pages/HousePrice",
-          "pages/IrisTracker"
+          "pages/IrisTracker",
+          "pages/SpamDetector"
         ],
         "name": ".MainAbility",
         "window": {
