Loaded Selfie segmentation graph model

--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -65,7 +65,8 @@
           "pages/mnist",
           "pages/HousePrice",
           "pages/IrisTracker",
-          "pages/SpamDetector"
+          "pages/SpamDetector",
+          "pages/SelfieSegmentation"
         ],
         "name": ".MainAbility",
         "window": {
