--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -66,7 +66,7 @@
           "pages/HousePrice",
           "pages/IrisTracker",
           "pages/SpamDetector",
-          "pages/SelfieSegmentation"
+          "pages/SelfieSegmentation",
           "pages/handpose"
         ],
         "name": ".MainAbility",
